# gif-jni

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yaml
src/: lib.rs
src/ditherer/: ditherer.rs  mod.rs
src/encoder/: ditherer.rs  mod.rs
src/quantizer/: mod.rs  quantizer.rs
src/style/: lowpoly.rs  mod.rs
