[package]
name = "gif-jni"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gif = "0.11.3"
jni = "0.19.0"
skia-safe = "0.50.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[target.aarch64-linux-android]
linker = "aarch64-linux-android-clang"