[package]
name = "gif-jni"
version = "2.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gif = "0.11.4"
jni = "0.19.0"
skia-safe = { version = "0.49.1", features = ["binary-cache", "gl"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"